...
    "chooseAStrongPassword": "Choose a strong password",
    "@chooseAStrongPassword": {
        "type": "String",
        "placeholders": {}
    },
    "clearArchive": "Clear archive",
    "close": "Close",
    "@close": {
        "type": "String",
        "placeholders": {}
    },
    "commandHint_markasdm": "Mark as direct message room for the giving Matrix ID",
    "commandHint_markasgroup": "Mark as group",
...
        "placeholders": {
            "username": {
                "type": "String"
            }
        }
    },
    "createGroup": "Create group",
    "createNewSpace": "New space",
    "@createNewSpace": {
        "type": "String",
        "placeholders": {}
    },
    "currentlyActive": "Currently active",
...
    },
    "locationPermissionDeniedNotice": "Location permission denied. Please grant them to be able to share your location.",
    "@locationPermissionDeniedNotice": {
        "type": "String",
        "placeholders": {}
    },
    "login": "Login",
    "@login": {
        "type": "String",
        "placeholders": {}
    },
    "logInTo": "Log in to {homeserver}",
    "@logInTo": {
...
    },
    "newVerificationRequest": "New verification request!",
    "@newVerificationRequest": {
        "type": "String",
        "placeholders": {}
    },
    "next": "Next",
    "@next": {
        "type": "String",
        "placeholders": {}
    },
    "no": "No",
    "@no": {
...
    },
    "passphraseOrKey": "passphrase or recovery key",
    "@passphraseOrKey": {
        "type": "String",
        "placeholders": {}
    },
    "password": "Password",
    "@password": {
        "type": "String",
        "placeholders": {}
    },
    "passwordForgotten": "Password forgotten",
    "@passwordForgotten": {
...
    },
    "security": "Security",
    "@security": {
        "type": "String",
        "placeholders": {}
    },
    "send": "Send",
    "@send": {
        "type": "String",
        "placeholders": {}
    },
    "sendAMessage": "Send a message",
    "@sendAMessage": {
...
    },
    "shareLocation": "Share location",
    "@shareLocation": {
        "type": "String",
        "placeholders": {}
    },
    "skip": "Skip",
    "@skip": {
        "type": "String",
        "placeholders": {}
    },
    "sourceCode": "Source code",
    "@sourceCode": {
...
    },
    "user": "User",
    "custom": "Custom",
    "whyIsThisMessageEncrypted": "Why is this message unreadable?",
    "noKeyForThisMessage": "This can happen if the message was sent before you have signed in to your account at this device.\n\nIt is also possible that the sender has blocked your device or something went wrong with the internet connection.\n\nAre you able to read the message on another session? Then you can transfer the message from it! Go to Settings > Devices and make sure that your devices h
    "newSpace": "New space",
    "doNotShowAgain": "Do not show again",
    "wasDirectChatDisplayName": "Empty chat (was {oldDisplayName})",
    "@wasDirectChatDisplayName": {
        "type": "String",
        "placeholders": {
            "oldDisplayName": {
                "type": "String"
...
            }
        }
    },
    "searchChatsRooms": "Search for #chats, @users...",
    "nothingFound": "Nothing found...",
    "groupName": "Group name",
    "createGroupAndInviteUsers": "Create a group and invite users",
    "groupCanBeFoundViaSearch": "Group can be found via search",
    "wrongRecoveryKey": "Sorry... this does not seem to be the correct recovery key.",
    "commandHint_sendraw": "Send raw json",
    "databaseMigrationTitle": "Database is optimized",
    "databaseMigrationBody": "Please wait. This may take a moment.",
    "leaveEmptyToClearStatus": "Leave empty to clear your status.",
...
    "sendCanceled": "Sending canceled",
    "loginWithMatrixId": "Login with Matrix-ID",
    "doesNotSeemToBeAValidHomeserver": "Doesn't seem to be a compatible homeserver. Wrong URL?",
    "calculatingFileSize": "Calculating file size...",
    "oneOfYourDevicesIsNotVerified": "One of your devices is not verified",
    "noticeChatBackupDeviceVerification": "Note: When you connect all your devices to the chat backup, they are automatically verified.",
    "continueText": "Continue",
    "blur": "Blur:",
    "opacity": "Opacity:",
    "setWallpaper": "Set wallpaper",
    "manageAccount": "Manage account",
    "noContactInformationProvided": "Server does not provide any valid contact information",
    "contactServerAdmin": "Contact server admin",
...
            }
        }
    },
    "logs": "Logs",
    "advancedConfigs": "Advanced Configs",
    "advancedConfigurations": "Advanced configurations",
    "signIn": "Sign in",
    "createNewAccount": "Create new account",
    "signUpGreeting": "FluffyChat is decentralized! Select a server where you want to create your account and let's go!",
    "signInGreeting": "You already have an account in Matrix? Welcome back! Select your homeserver and sign in.",
    "theProcessWasCanceled": "The process was canceled.",
    "join": "Join",
    "searchOrEnterHomeserverAddress": "Search or enter homeserver address",
    "matrixId": "Matrix ID",
    "setPowerLevel": "Set power level",
    "makeModerator": "Make moderator",
    "makeAdmin": "Make admin",
    "removeModeratorRights": "Remove moderator rights",
    "removeAdminRights": "Remove admin rights",
...
