appId: chat.fluffy.fluffychat
---
- extendedWaitUntil: # Wait for app to be visible
    visible: "Sign in"
    timeout: 60000
- retry:
    maxRetries: 10 # Emulator might need some time to be ready to
    commands:
      - tapOn: "Sign in"
- tapOn: "Search or enter homeserver address"
- inputText: "http://${HOMESERVER}"
- pressKey: "back"
- tapOn:
    id: "homeserver_tile_0"
- tapOn: "Continue"
- assertVisible: "Log in to http://${HOMESERVER}"
- inputText: "${USER1_NAME}"
- tapOn: "Password"
- inputText: "${USER1_PW}"
- tapOn: "Login" # Click the login button